--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -25,7 +25,8 @@
                        FontSize="30" VerticalAlignment="Center" Margin="10 0 0 0"/>
         </DockPanel>
        
-
+        <!--test commit-->
+        
         <TextBlock Name="Percent_Sugar"  Margin="10 0 0 80" Width="300" Height="50"
                    VerticalAlignment="Bottom" FontSize="25" FontWeight="Light" Foreground="#5D613C"/>
         <Slider Maximum="100" TickPlacement="BottomRight" TickFrequency="25" IsSnapToTickEnabled="True"
