--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -30,6 +30,11 @@
         <!--test commit-->
         <!--test commit-->
         <!--test commit-->
+ <!--test commit-->
+        <!--test commit-->
+        <!--test commit-->
+        <!--test commit-->
+        <!--test commit-->
 
         <TextBlock Name="Percent_Sugar"  Margin="10 0 0 80" Width="300" Height="50"
                    VerticalAlignment="Bottom" FontSize="25" FontWeight="Light" Foreground="#5D613C"/>
